[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 2.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
duckSpeed = 6.0

[node name="DuckSpot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.193639, 0 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.695, 0 )

[node name="Camera" type="Camera" parent="Pivot"]

[node name="SpotLight" type="SpotLight" parent="Pivot/Camera"]
spot_range = 25.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DuckCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 1.5, 0 )

[node name="DuckCast2" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 1.5, 0 )
